Sorted all files, add ../<file name>/<js/css name> to access the file. Changed padding on css(even list) Fixed title not showing when accessing session in teacher.

--- a/boxio/css/styles.css
+++ b/boxio/css/styles.css
@@ -41,6 +41,7 @@ li{
 
 li:nth-child(even){
     padding: 20px;
+    padding-bottom: 50px;
     background: white;
 }
 
